OODA-01: Downgrade Java SDK to Java 17 LTS
- Update pom.xml: maven.compiler.source/target 21→17
- Update compiler plugin: release 21→17
- Replace List.getFirst() with get(0) in test files
- Replace List.getLast() with get(size()-1) in FakeHttpClient
- All 230 unit tests pass with Java 17.0.18